objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIZAG</fullName>
                </value>
                <value>
                    <fullName>KURNOOL</fullName>
                </value>
                <value>
                    <fullName>HYDERABAD</fullName>
                </value>
                <value>
                    <fullName>WARANGAL</fullName>
                </value>
                <value>
                    <fullName>CHENNAI</fullName>
                </value>
                <value>
                    <fullName>KANCHI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommisiontoHospital__c</fullName>
        <formula>Moneycharged__c  - 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommisiontoHospital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moneycharged__c</fullName>
        <label>Moneycharged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patientrelationship__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Moneychargedshould_be_greaterthan50</fullName>
        <active>true</active>
        <errorConditionFormula>Moneycharged__c  &lt; 50</errorConditionFormula>
        <errorDisplayField>Moneycharged__c</errorDisplayField>
        <errorMessage>Please insert morethan 50</errorMessage>
    </validationRules>
</CustomObject>